# Crossld

./: CMakeLists.txt
playground/: print_msg.s  zad2.c  zad2_2.c
small3/: example.c  example2.c  example3.c  small3.c  trampTest.c  trampolina.c  zad3.c
zad1/: asm.h  called_invoker.c  called_invoker.h  common.c  common.h  crossld.c  crossld_main.c  elfHeader.c  loader.c  loader.h  preparation.c  preparation.h  readme.txt  switch_64_32  switch_64_32.c
zad1/hello/: Makefile  crossld_main.c  fakelib.c  hello-32.c  hello-64.c
zad1/playground/: Makefile  crossld_main.c  exit.c  loader.c  longlong.c  multiargs.c  run.sh
